# pyBayesPPR

./: .Rhistory  .gitignore  CHANGES.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: Build.yml
examples/: ex1.ipynb  ex1.md  ex2.ipynb  ex2.md
pyBayesPPR/: __init__.py  pyBayesPPR.py  pyBayesPPR_try2.py  test.py
tests/: test_bpprPCA_fit.py  test_bppr_fit.py  test_bppr_fit_friedman.py  test_bppr_fit_gl.py
